# titan_firmware

./: .clang-format  .gitignore  .gitmodules  README.md  global_defs.cmake
Actuator/: CMakeLists.txt  async_i2c_slave.c  async_i2c_slave.h  async_i2c_target.c  commands.py  hal.py  halSimulated.py  initActuator.c  main.c  main.py  safety.h  safety_interface.c
Actuator/UWRT_ACOUSTICS/: mpconfigboard.h
Actuator/UWRT_ACTUATOR/: mpconfigboard.h
Actuator/include/actuators/: claw.h  dropper.h  torpedo.h
Actuator/include/drivers/: async_i2c_target.h  safety.h
Actuator/old/: Actuator.c  Actuator.h  Claw.c  Dropper.c
Actuator/src/: main.c  ros.c
Actuator/src/actuators/: claw.c  dropper.c  torpedo.c  torpedo.pio
Actuator/src/drivers/: async_i2c_target.c  safety_interface.c
ActuatorMk2/: CMakeLists.txt
ActuatorMk2/include/ros/: ros.h
ActuatorMk2/src/: main.c  safety_interface.c
ActuatorMk2/src/actuators/: claw.c  torpedo.c
ActuatorMk2/src/ros/: ros.c
Backplane/: CMakeLists.txt  main.c
Backplane/src/: main.c  safety_interface.c
CameraCageBBMk2/: CMakeLists.txt
CameraCageBBMk2/include/: safety_interface.h
CameraCageBBMk2/src/: main.c
CameraCageBBMk2/src/drivers/: async_i2c.c
CameraCageBBMk2/src/ros/: depth_publisher.c  ros.c
Copro/: CMakeLists.txt  README.md  adc.c  async_i2c.c  balancer_adc.c  command_tester.py  commands.py  depth_error_log.txt  depth_sensor.c  dio.c  dshot.c  dshot.pio  esc_adc.c  hal.py  halSimulated.py  lux_sensor.c  main.c  main.py  old_halSimulated.py  puddlesRobot.py  ros.c  safety.c  safety.h  titanRobot.py
Copro/UWRT_COPRO/: mpconfigboard.h
Copro/include/: async_i2c.h  balancer_adc.h  depth_sensor.h  depth_sensor_commands.h  dshot.h  esc_adc.h  lux_sensor.h  ros.h  safety.h
Copro/include/drivers/: adc.h  async_i2c.h  bmp280.h  memmonitor.h  safety.h
Copro/include/hw/: actuator.h  balancer_adc.h  bmp280_temp.h  depth_sensor.h  depth_sensor_commands.h  dio.h  dshot.h  esc_adc.h  esc_pwm.h
Copro/include/tasks/: cooling.h  lowbatt.h
Copro/src/: main.c
Copro/src/drivers/: adc.c  async_i2c.c  bmp280.c  hard_fault_handler.S  memmonitor.c  safety.c  safety_helper.S  safety_interface.c
Copro/src/hw/: actuator.c  balancer_adc.c  bmp280_temp.c  dio.c  (+5 more)
Copro/uasyncio/: core.py
ESCBoard/: CMakeLists.txt
ESCBoard/include/: ros.h  safety_interface.h
ESCBoard/src/: uart_rx.pio
SBCBoard/: CMakeLists.txt
SBCBoard/include/: bq25730.h  safety_interface.h  screen.h  tps25750.h
SBCBoard/src/: bq25730.c  main.c  safety_interface.c  tps25750.c
bootloader/: CMakeLists.txt  FindBOOTUF2CAT.cmake  bl_server.c  can_bl_interface.c  crt0.S  enable_bootloader.cmake  eth_bl_interface.c  main.c  memmap_bootloader.ld
bootloader/bl_binary_info/: CMakeLists.txt
bootloader/boot_uf2_cat/: CMakeLists.txt  dump.c  main.c
bootloader/bootloader_runtime/: CMakeLists.txt  bl_binary_info.c  boot2_bootloader_03_copyout.S  boot_app.c  clocks.c  crt0.S  flash.c  memmap_app.ld  memmap_bootloader.ld  runtime.c  timer.c
bootloader/can_bl_custom_id/: mk2_esc_board.h  sbh_mcu.h
bootloader/include/: bl_interface.h  bl_server.h  can_bl_interface.h
examples/dshot_test/: CMakeLists.txt  bidir_dshot.pio  extended_telem.c  main.c
examples/dynamixel_test/: CMakeLists.txt  main.c
examples/micro_ros_example/: CMakeLists.txt  main.c  safety_interface.c
examples/micro_ros_example_can/: CMakeLists.txt  main.c  safety_interface.c  safety_interface.h
examples/micro_ros_template/: CMakeLists.txt
examples/pico_sdk_example/: CMakeLists.txt  main.c
examples/protobuf_example/: CMakeLists.txt  main.c  protos.proto
examples/template/: CMakeLists.txt
lib/: CMakeLists.txt  README.md  ioLibrary_import.cmake
lib/actuator_i2c_interface/: CMakeLists.txt  crc8_calc.c
lib/async_i2c/: CMakeLists.txt
lib/basic_logger/: CMakeLists.txt  basic_logger.c  basic_logging.c
lib/basic_queue/: CMakeLists.txt
lib/can_bus/: CMakeLists.txt
lib/can_mcp2515/: CMakeLists.txt
lib/can_pio/: CMakeLists.txt
lib/driver_async_i2c/: CMakeLists.txt  async_i2c.c
lib/driver_canbus/: CMakeLists.txt
lib/driver_depth/: CMakeLists.txt
lib/driver_dynamixel/: CMakeLists.txt
lib/driver_led/: CMakeLists.txt  led.c
lib/driver_mcp3426/: CMakeLists.txt  mcp3426.c
lib/driver_sht41/: CMakeLists.txt  sht41.c
lib/driver_ssd1306/: CMakeLists.txt  ssd1306.c  ssd1306_fonts.c  ssd1306_tests.c
lib/driver_status_strip/: CMakeLists.txt  status_strip.c
lib/driver_wiznet/: CMakeLists.txt
lib/dual_serial_stdio_usb/: CMakeLists.txt  reset_interface.c  stdio_usb.c  stdio_usb_descriptors.c
lib/dynamixel/: CMakeLists.txt
lib/ioLibrary_Port/: CMakeLists.txt
lib/micro_ros_pico/: CMakeLists.txt  build.sh  pico_eth_transport.c  pico_eth_transport.h  pico_uart_transport.c  pico_uart_transports.h
lib/safety/: CMakeLists.txt  safety.c  safety_helper.S
lib/sht41/: CMakeLists.txt
lib/status_strip/: CMakeLists.txt
lib/titan_binary_info/: CMakeLists.txt
lib/titan_boards/: titan_boards.cmake
lib/titan_bootloader/: CMakeLists.txt  FindBOOTUF2CAT.cmake  bl_server.c  can_bl_interface.c  enable_bootloader.cmake  eth_bl_interface.c  main.c
lib/titan_canmore/: CMakeLists.txt
lib/titan_debug/: CMakeLists.txt  titan_debug.c
lib/titan_dual_stdio_usb/: CMakeLists.txt  reset_interface.c  stdio_usb.c  stdio_usb_descriptors.c
lib/titan_list/: CMakeLists.txt
lib/titan_logger/: CMakeLists.txt  logger.c
lib/titan_msgs/: CMakeLists.txt
lib/titan_queue/: CMakeLists.txt
lib/titan_safety/: CMakeLists.txt
lib/titan_version/: CMakeLists.txt  gen_version.cmake
lib/uwrt_boards/: uwrt_boards.cmake
lib/version_tag/: CMakeLists.txt  gen_version.cmake  version_tag.cmake
lib/wiznet_ethernet/: CMakeLists.txt  ioLibrary_import.cmake
upload_tool/: CMakeLists.txt  FindUploadTool.cmake  board_definitions.c  discover.c  main.c  port_lookup_tool.c  reset.c  serial.c  upload.cpp  uploader.h
upload_tool/bootloader-serial-read/: linker.ld
upload_tool/picoboot_connection/: picoboot_connection.c  picoboot_connection.h  picoboot_connection_cxx.cpp  picoboot_connection_cxx.h
(+786 files in other folders)
