add_subdirectory(driver_async_i2c/)
add_subdirectory(driver_canbus/)
add_subdirectory(driver_depth/)
add_subdirectory(driver_dynamixel/)
add_subdirectory(driver_led/)
add_subdirectory(driver_mcp3426/)
add_subdirectory(driver_sht41/)
add_subdirectory(driver_ssd1306/)
add_subdirectory(driver_status_strip/)
add_subdirectory(driver_wiznet/)
add_subdirectory(micro_ros_pico/)
# pico-sdk/ is handled specially in global_defs.cmake
# titan_boards/ is handled specially in global_defs.cmake
include(titan_bootloader/enable_bootloader.cmake)
add_subdirectory(titan_binary_info/)
add_subdirectory(titan_canmore/)
add_subdirectory(titan_debug/)
add_subdirectory(titan_dual_stdio_usb/)
add_subdirectory(titan_logger/)
add_subdirectory(titan_queue/)
add_subdirectory(titan_safety/)
add_subdirectory(titan_version/)
include(nanopb/extra/FindNanopb.cmake)
